--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "react": "^19.2.0",
     "react-dom": "^19.2.0",
     "react-i18next": "^16.5.1",
+    "react-router-dom": "^7.12.0",
     "tailwindcss": "^4.1.18",
     "vite-plugin-svgr": "^4.5.0"
   },
